OTWO-4402 fixed alignment issues

--- a/app/assets/stylesheets/projects.sass
+++ b/app/assets/stylesheets/projects.sass
@@ -309,4 +309,4 @@ $pai_levels: (('very_high',0), ('high', 1), ('moderate', 2), ('low', 3), ('very_
 
 .project_security
   .security-panel-title
-    padding-left: 1rem
+    padding-left: 15px
